Fix float to double conversion for java 1.8